# hamler

./: .gitignore  .tool-versions  CHANGELOG.md  DESIGN.md  Env  Hello.hm  LICENSE  Makefile  README.md  cabal.project  default.nix  erl_crash.dump  external.nix  get-hamler-home.sh  hamler.cabal  package.yaml  shell.nix  stack.yaml
.github/dockerfile/: Dockerfile.centos  Dockerfile.debian
.github/workflows/: build.yaml  main.yaml  update-base-image.yaml
app/: Compile.hs  Main.hs  Minteractive.hs  REPL.hs  Version.hs
deploy/docker/: Dockerfile
doc/: Cheatsheet.md  README
doc/design/: DataTypes.xmind  Hamler.xmind  Package.xmind  Types-Mapping.md
doc/guide/: 00_TableOfContents.md  01_WhyHamler.md  02_QuickStart.md  02_SetUp.md  03_BasicFunctionsAndTypes.md  03_BasicTypesFucntionsAndOperators.md  04_MoreTypesandPatternMatching.md  05_HighOrderFunctionsAndRecursions.md  05_HigherOrderFunctionsAndRecursions.md  06_TypeClasses.md  07_ApplicativeAndMonad.md  09_OTP.md  BasicFunctionsAndTypes.md  ConcurrentAndDistribution.md  HighOrderFunctionsAndRecursions.md  SetUp.md
docs/: DESIGN.md  Hamler(Purescript).xmind  Libraries.xmind  Package.xmind  Syntax.md  Types-Mapping.md
docs/Lang/: Syntax.md
docs/design/: Syntax.md
docs/guide/: 00_TableOfContents.md  01_WhyHamler.md  02_SetUp.md  03_BasicFunctionsAndTypes.md  03_BasicTypesFucntionsAndOperators.md  04_MoreTypesandPatternMatching.md  05_HighOrderFunctionsAndRecursions.md  05_HigherOrderFunctionsAndRecursions.md  07_ApplicativeAndMonad.md  07_ForeignLanguageInterface.md  BasicFunctionsAndTypes.md  ForeignLanguageInterface.md  HighOrdFunctionsAndRecursions.md  MoreTypesandPatternMatching.md  TypeSystemInHamler.md
ebin/: Control.Monad.info  Control.OTP.GenEvent.info  Data.Bits.info  Data.Bool.info  Data.Either.info  Data.Eq.info  Data.Float.info  Data.Function.info  Data.Maybe.info  Data.Ord.info  Data.Ordering.info  Data.Ref.info  Data.Ring.info  Data.Semigroup.info  Data.Semiring.info  Data.Show.info  Data.Tuple.info  Data.Unit.info  ERTS.Atomics.info  ERTS.Counters.info  ERTS.Init.info  ERTS.PersistentTerm.info  Foreign.info  Monad.core  System.VM.info  cache-db.json  hamler.app
examples/: Hello.core  Hello.erl
lib/: DemoServer.hm  ETS.erl  ETS.hm  Erlang.hm  Foreign.core  Foreign.erl  Foreign.hm  Foreign.hrl  Math.erl  Math.hm  Prelude.hm  README.md
lib/Control/: Application.erl  Application.hm  Applicative.core  Applicative.erl  Applicative.hm  Behaviour.hm  Monad.core  Monad.erl  Monad.hm  Process.core  Process.erl  Process.hm  Traversable.hm
lib/Data/: .Traversable.hm.swp  Array.erl  Array.hm  Atom.erl  Atom.hm  Atomics.erl  Atomics.hm  Base.hm  Bifunctor.hm  Binary.core  Binary.erl  Binary.hm  Bits.core  Bits.erl  Bits.hm  Bool.hm  Boolean.hm  Char.core  Char.erl  Char.hm  Counters.erl  Counters.hm  DateTime.hm  Digraph.erl  Digraph.hm  EVal.erl  EVal.hm  EVal.hrl  Either.hm  Enum.core  Enum.erl  Enum.hm  Eq.core  Eq.erl  Eq.hm  Float.core  Float.erl  Float.hm  Foldable.core  Foldable.erl  (+73 more)
lib/Database/: DETS.erl  DETS.hm  ETS.core  ETS.erl  ETS.hm  Mnesia.core  Mnesia.erl  Mnesia.hm
lib/Demo/: Event.hm  GenServer.hm  Server.hm
lib/ERTS/: Application.hm  Atomics.core  Atomics.erl  Atomics.hm  Boot.erl  Boot.hm  Counters.core  Counters.erl  Counters.hm  Init.core  Init.erl  Init.hm  PersistentTerm.hm
lib/Erlang/: Base.core  Base.erl  Base.hm  Math.core  Math.hm  Process.hm  VM.erl  VM.hm
lib/Foreign/: Curry.erl  Curry.hrl  Maybe.erl  Maybe.hrl  ToErl.erl
lib/Kernel/: Application.hm  RPC.erl  RPC.hm
lib/Network/: DTLS.erl  DTLS.hm  Inet.erl  Inet.hm  Socket.erl  Socket.hm  TCP.erl  TCP.hm  TLS.erl  TLS.hm  UDP.erl  UDP.hm
lib/Newtork/: Socket.core  Socket.erl  Socket.hm
lib/System/: Code.erl  Code.hm  Dir.core  Dir.erl  Dir.hm  Directory.hm  Env.core  Env.erl  Env.hm  Environment.hm  Error.core  Error.erl  Error.hm  File.core  File.erl  File.hm  FilePath.erl  FilePath.hm  IO.core  IO.erl  IO.hm  Init.core  Init.erl  Init.hm  Logger.hm  OS.core  OS.erl  OS.hm  Random.core  Random.erl  Random.hm  Timer.erl  Timer.hm  Trace.hm  VM.core  VM.erl  VM.hm
lib/Test/: QuickCheck.erl  QuickCheck.hm
lib/Text/: Json.hm  Parsec.hm
lib/Unsafe/: Coerce.erl  Coerce.hm  Union.hm
libs/: Erlang.hm  Prelude.core  Prelude.hm  library.org
libs/Array/: Array.purs
libs/Binary/: Binary.purs
libs/Data/: Base.hm  Eq.hm  List.hm  Map.hm  Maybe.hm  Ord.hm  Ring.hm  Semiring.core  Semiring.hm  Tuple.hm
libs/List/: List.hm  List.purs
libs/Map/: Map.purs
libs/Math/: Math.hm
libs/Maybe/: Maybe.hm
main/: Main.hs
repl/: replsrv
src/: Core.hm  Hamler.hs  Main.hs
tests/: CodeGenTest.hs  CompileTest.hs  Main.hs  Test.hm  test.txt
(+270 files in other folders)
