cabal-version:       >=1.10

name:                hamler
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Feng Lee
maintainer:          feng@emqx.io
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Hamler
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hamler
  main-is:             Main.hs
  other-modules:       Hamler
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
