cabal-version:       >=1.10

name:                hamler
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Feng Lee
maintainer:          feng@emqx.io
homepage:            https://github.com/hamler-lang/hamler
bug-reports:         https://github.com/hamler-lang/hamler/issues
copyright:           Copyright (c) 2020 EMQ Technologies Co., Ltd.
category:            Compiler, Language
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
    type:     git
    location: git://github.com/hamler-lang/hamler.git

library
  exposed-modules:     Hamler

  other-modules:       Hamler.Parser
                     , Hamler.Parser.Lexer
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , text
                     , megaparsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hamler
  main-is:             Main.hs
  other-modules:       Hamler
                     , Hamler.Parser
                     , Hamler.Parser.Lexer
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , text
                     , megaparsec
  hs-source-dirs:      src
  default-language:    Haskell2010
